[package]
name = "gi_t"
version = "0.0.2"
authors = ["Arpan Laha <arpanlaha99@gmail.com>"]
edition = "2018"
description = "A git typo handler."
readme = "README.md"
homepage = "https://github.com/arpanlaha/gi_t"
repository = "https://github.com/arpanlaha/gi_t"
license = "MIT"
keywords = ["cli", "git", "typo"]
categories = ["command-line-utilities"]

[dependencies]
termcolor = "1.1"

[[bin]]
name = "gi"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
